@@ -133,5 +133,6 @@ inist-tools (0.9.11RC) RC; urgency=medium
   * [DEV] Un exit mal placé...
   * [DEV] Mise-au-point docker-install #1
   * [DEV] Mise-au-point docker-install #2
+  * [DEV] Mise-au-point docker-install #3
 
  -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200
